# banner-generator

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
banner_generator/: __init__.py  cli.py  lambda_handler.py  renderer.py
banner_generator/templates/: ai-hero-certificate.html  asl-content-card.html
banner_generator/templates/ai-hero-certificate/: template.html
banner_generator/templates/asl-blueprint-path/: style.css  template.html
banner_generator/templates/asl-content-card/: content-card.css  template.html
banner_generator/templates/asl-editorial-pulse/: style.css  template.html
banner_generator/templates/asl-event-stage/: style.css  template.html
banner_generator/templates/asl-project-dossier/: style.css  template.html
docs/: architecture.md  content-cover-placement.md  lambda-container-plan.md  lambda-todo.md  setup.md  templates.md  todo.md
examples/: ai-hero-certificate.json  content-blog.json  content-course.json  content-event-jpeg.json  content-event.json  content-long-title.json  content-project.json  content-resource.json  content-workshop.json  lambda-ai-hero-certificate.json  lambda-content-event-jpeg.json  lambda-content-event.json  workshop.json
examples/content-variants/: blueprint-path-course.json  editorial-pulse-blog.json  event-stage-live.json  project-dossier-showcase.json  resource-stack-download.json
scripts/: benchmark_lambda_event.py  invoke_lambda_event.py  render_content_variant_matrix.py
tests/: test_lambda_handler.py  test_renderer.py
(+4 files in other folders)
