[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "banner-generator"
description = "Generate branded social banners from HTML templates."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dynamic = ["version"]
authors = [
    {name = "AI Shipping Labs"}
]
dependencies = [
    "boto3>=1.41.0",
    "playwright==1.58.0",
]

[project.scripts]
banner-generator = "banner_generator.cli:main"

[dependency-groups]
dev = [
    "hatch>=1.15.0",
    "pytest>=8.4.0",
    "ruff>=0.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["banner_generator"]

[tool.hatch.version]
path = "banner_generator/__version__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["F", "I"]
